# nautica-downloader-rs

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/fixtures/: songs.json
