[package]
name = "nautica-downloader-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
attohttpc = { version = "0.26.1", features = ["json", "tls-rustls-native-roots"] }
chrono = { version = "0.4.30", features = ["serde"] }
clap = { version = "4.4.2", features = ["derive", "string"] }
encoding_rs = "0.8.33"
serde = { version = "1.0.188", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
zip = "0.6.6"

[dev-dependencies]
httpmock = "0.6.8"
serde_json = "1.0.105"
tempfile = "3.8.0"
