[package]
name = "nautica-downloader-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
attohttpc = { version = "0.26.1", features = ["json", "tls-rustls-native-roots"] }
chardetng = "0.1.17"
chrono = { version = "0.4.30", features = ["serde"] }
clap = { version = "4.4.2", features = ["derive", "string"] }
encoding_rs = "0.8.33"
pickledb = "0.5.1"
serde = { version = "1.0.188", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
zip = "0.6.6"

[dev-dependencies]
httpmock = "0.6.8"
serde_json = "1.0.105"
tempfile = "3.8.0"

[package.metadata.cross.build.env]
# This avoids cross picking up custom linker from ~/.cargo/config.toml
# See: https://github.com/cross-rs/cross/issues/621
passthrough = [
    "CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_LINKER=x86_64-linux-gnu-gcc",
    "RUSTFLAGS",
]
